@@ -1,3 +1,13 @@
+2011-04-29  Jer Noble  <jer.noble@apple.com>
+
+        Reviewed by Eric Seidel.
+
+        Implement FULLSCREEN_API on Windows, Part 4: Enable it
+        https://bugs.webkit.org/show_bug.cgi?id=59798
+
+        * WebCore.vcproj/WebCore.vcproj: Add missing full screen related
+            files to the project.
+
 2011-05-03  Alpha Lam  <hclam@chromium.org>
 
         Not reviewed. Build fix.
