@@ -1,3 +1,12 @@
+2011-04-29  Jer Noble  <jer.noble@apple.com>
+
+        Reviewed by Eric Seidel.
+
+        Implement FULLSCREEN_API on Windows, Part 4: Enable it
+        https://bugs.webkit.org/show_bug.cgi?id=59798
+
+        * win/tools/vsprops/FeatureDefines.vsprops: Set ENABLE_FULLSCREEN_API to true.
+
 2011-05-03  David Kilzer  <ddkilzer@apple.com>
 
         Part 1 of 2: <http://webkit.org/b/59838> Implement HTTP pipelining for CoreFoundation-based networking
