@@ -1,3 +1,12 @@
+2011-04-29  Jer Noble  <jer.noble@apple.com>
+
+        Reviewed by Eric Seidel.
+
+        Implement FULLSCREEN_API on Windows, Part 4: Enable it
+        https://bugs.webkit.org/show_bug.cgi?id=59798
+
+        * wtf/Platform.h: Set ENABLE_FULLSCREEN_API on win.
+
 2011-05-03  Alexis Menard  <alexis.menard@openbossa.org>
 
         Reviewed by Eric Seidel.
